--- a/charts/wazuh/Chart.yaml
+++ b/charts/wazuh/Chart.yaml
@@ -3,7 +3,7 @@ name: wazuh
 description: Wazuh is a free and open source security platform that unifies XDR and SIEM protection for endpoints and cloud workloads.
 type: application
 appVersion: 4.10.1
-version: 0.0.1
+version: 0.0.2
 home: https://wazuh.com/
 sources:
   - https://github.com/promptlylabs/wazuh-helm-chart
@@ -22,12 +22,18 @@ keywords:
   - elasticsearch
 dependencies:
   - name: cert-manager
-    version: 1.16.3
+    version: 1.17.0
     repository: https://charts.jetstack.io
     condition: cert-manager.enabled
 annotations:
   artifacthub.io/category: security
-  # artifacthub.io/changes: |
+  artifacthub.io/changes: |
+    - kind: added
+      description: Checksum on Deployments and StatefulSets for Pod restarts after config changes
+    - kind: added
+      description: PodDisruptionBudgets and NetworkPolicies
+    - kind: changed:
+      description: initContainer images to busybox:stable
   artifacthub.io/links: |
     - name: application source
       url: https://github.com/wazuh/wazuh
