--- a/charts/wazuh/templates/certs/certificate.yaml
+++ b/charts/wazuh/templates/certs/certificate.yaml
@@ -1,9 +1,8 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: admin
+  name: {{ include "wazuh.fullname" . }}-admin
 spec:
-  # Secret names are always required.
   secretName: admin-tls
 
   privateKey:
@@ -25,19 +24,14 @@ spec:
     localities:
       - California
 
-  # Issuer references are always required.
   issuerRef:
-    name: ca-issuer
-    # We can reference ClusterIssuers by changing the kind here.
-    # The default value is Issuer (i.e. a locally namespaced Issuer)
-    kind: Issuer
+    name: {{ include "wazuh.fullname" . }}-ca-issuer
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: dashboard
+  name: {{ include "wazuh.fullname" . }}-dashboard
 spec:
-  # Secret names are always required.
   secretName: dashboard-tls
 
   privateKey:
@@ -59,19 +53,14 @@ spec:
     localities:
       - California
 
-  # Issuer references are always required.
   issuerRef:
-    name: ca-issuer
-    # We can reference ClusterIssuers by changing the kind here.
-    # The default value is Issuer (i.e. a locally namespaced Issuer)
-    kind: Issuer
+    name: {{ include "wazuh.fullname" . }}-ca-issuer
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: node
+  name: {{ include "wazuh.fullname" . }}-node
 spec:
-  # Secret names are always required.
   secretName: node-tls
 
   privateKey:
@@ -93,19 +82,14 @@ spec:
     localities:
       - California
 
-  # Issuer references are always required.
   issuerRef:
-    name: ca-issuer
-    # We can reference ClusterIssuers by changing the kind here.
-    # The default value is Issuer (i.e. a locally namespaced Issuer)
-    kind: Issuer
+    name: {{ include "wazuh.fullname" . }}-ca-issuer
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: filebeat
 spec:
-  # Secret names are always required.
   secretName: filebeat-tls
 
   privateKey:
@@ -127,9 +111,5 @@ spec:
     localities:
       - California
 
-  # Issuer references are always required.
   issuerRef:
-    name: ca-issuer
-    # We can reference ClusterIssuers by changing the kind here.
-    # The default value is Issuer (i.e. a locally namespaced Issuer)
-    kind: Issuer
+    name: {{ include "wazuh.fullname" . }}-ca-issuer
