--- a/charts/wazuh/templates/dashboard/deployment.yaml
+++ b/charts/wazuh/templates/dashboard/deployment.yaml
@@ -5,7 +5,9 @@ metadata:
   labels:
     app: {{ include "wazuh.fullname" . }}-dashboard
   annotations:
+    {{- if .Values.dashboard.annotations -}}
     {{- toYaml .Values.dashboard.annotations | nindent 4 }}
+    {{- end }}
 spec:
   replicas: {{ .Values.dashboard.replicas }}
   selector:
@@ -16,10 +18,9 @@ spec:
       labels:
         app: {{ include "wazuh.fullname" . }}-dashboard
       annotations:
+        checksum/config: {{ (include (print .Template.BasePath "/dashboard/configmap.yaml") . | cat (include (print .Template.BasePath "/dashboard/secret.yaml") .) | sha256sum) }}
+        {{- if .Values.dashboard.annotations -}}
         {{- toYaml .Values.dashboard.annotations | nindent 8 }}
-        {{- if .Values.reloader.enabled -}}
-        secret.reloader.stakater.com/reload: "dashboard-certs"
-        configmap.reloader.stakater.com/reload: "dashboard-conf"
         {{- end }}
       name: {{ include "wazuh.fullname" . }}-dashboard
     spec:
@@ -35,6 +36,8 @@ spec:
           image: "{{ .Values.dashboard.images.repository }}:{{ .Values.dashboard.images.tag }}"
           resources:
             {{- toYaml .Values.dashboard.resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.dashboard.securityContext | nindent 12 }}
           volumeMounts:
             # Config
             - mountPath: /usr/share/wazuh-dashboard/config/opensearch_dashboards.yml
@@ -57,6 +60,11 @@ spec:
           ports:
             - containerPort: {{ .Values.dashboard.service.httpPort }}
               name: dashboard
+          {{- /*
+          # Will be implemented on Wazuh v5.0.0
+          readinessProbe:
+            {{- toYaml .Values.dashboard.readinessProbe | nindent 12 }}
+          */}}
           env:
             - name: INDEXER_URL
               value: "https://indexer:{{ .Values.indexer.service.httpPort }}"
