--- a/charts/wazuh/templates/manager/worker/statefulset.yaml
+++ b/charts/wazuh/templates/manager/worker/statefulset.yaml
@@ -6,7 +6,9 @@ metadata:
     app: {{ include "wazuh.fullname" . }}-manager
     node-type: worker
   annotations:
+    {{- if .Values.wazuh.worker.annotations -}}
     {{- toYaml .Values.wazuh.worker.annotations | nindent 4 }}
+    {{- end }}
 spec:
   replicas: {{ .Values.wazuh.worker.replicas }}
   selector:
@@ -22,10 +24,9 @@ spec:
         node-type: worker
       name: wazuh-manager-worker
       annotations:
+        checksum/config: {{ (include (print .Template.BasePath "/manager/configmap.yaml") . | cat (include (print .Template.BasePath "/manager/secret-api-cred.yaml") . ) | cat (include (print .Template.BasePath "/manager/secret-authd-pass.yaml") . ) | cat (include (print .Template.BasePath "/manager/secret-cluster-key.yaml") . ) | sha256sum) }}
+        {{- if .Values.wazuh.worker.annotations -}}
         {{- toYaml .Values.wazuh.worker.annotations | nindent 8 }}
-        {{- if .Values.reloader.enabled -}}
-        secret.reloader.stakater.com/reload: "indexer-certs"
-        configmap.reloader.stakater.com/reload: "{{ template "wazuh.fullname" . }}-worker-config"
         {{- end }}
     spec:
       affinity:
@@ -52,7 +53,7 @@ spec:
         fsGroup: 101
       initContainers:
         - name: update-index
-          image: alpine
+          image: busybox:stable
           command: 
             - 'sh'
             - '-c'
@@ -134,6 +135,11 @@ spec:
               name: agents-events
             - containerPort: {{ .Values.wazuh.service.port }}
               name: cluster
+          {{- /*
+          # Will be implemented on Wazuh v5.0.0
+          readinessProbe:
+            {{- toYaml .Values.wazuh.readinessProbe | nindent 12 }}
+          */}}
           env:
             - name: INDEXER_URL
               value: "https://indexer:{{ .Values.indexer.service.httpPort }}"
