--- a/charts/wazuh/values.yaml
+++ b/charts/wazuh/values.yaml
@@ -32,6 +32,14 @@ indexer:
     limits:
       memory: 2Gi
 
+  # Will be implemented on Wazuh v5.0.0
+  # readinessProbe: {}
+
+  securityContext: {}
+
+  networkPolicy:
+    enabled: true
+
   initContainers:
     volumeMountHack:
       resources:
@@ -40,6 +48,7 @@ indexer:
         requests:
           cpu: 50m
           memory: 128Mi
+      securityContext: {}
     increaseTheVmMaxMapCount:
       resources:
         limits:
@@ -47,6 +56,8 @@ indexer:
         requests:
           cpu: 50m
           memory: 128Mi
+      securityContext:
+        privileged: true
 
   config:
     opensearch: |-
@@ -59,8 +70,6 @@ indexer:
     CLUSTER_NAME: "wazuh"
     NETWORK_HOST: "0.0.0.0"
     DISABLE_INSTALL_DEMO_CONFIG: "true"
-
-  plugins: []
 
   storageSize: 50Gi
   storageClass: null
@@ -88,6 +97,14 @@ dashboard:
     requests:
       cpu: 500m
       memory: 512Mi
+  
+  # Will be implemented on Wazuh v5.0.0
+  # readinessProbe: {}
+
+  securityContext: {}
+
+  networkPolicy:
+    enabled: true
 
   # with this you will be able to access kibana on http port instead of https
   # if you use Ambassador edgestack this is necessary becasue
@@ -125,6 +142,9 @@ wazuh:
     tag: "4.10.1"
     pullSecret: regcred
 
+  # Will be implemented on Wazuh v5.0.0
+  # readinessProbe: {}
+
   env:
     FILEBEAT_SSL_VERIFICATION_MODE: full
 
@@ -146,7 +166,12 @@ wazuh:
     pass: "password"
   
   initContainer:
-    resources: {}
+    resources: 
+      limits:
+        memory: 32Mi
+      requests:
+        cpu: 5m
+        memory: 16Mi
 
   master:
     annotations: {}
@@ -164,6 +189,9 @@ wazuh:
       requests:
         cpu: 500m
         memory: 512Mi
+    
+    networkPolicy:
+      enabled: true
     
     # If defined, storageClassName: <storageClass>
     # If set to "-", storageClassName: "", which disables dynamic provisioning
@@ -194,6 +222,9 @@ wazuh:
       requests:
         cpu: 500m
         memory: 512Mi
+    
+    networkPolicy:
+      enabled: true
 
     storageClass: null
     storageSize: 50Gi
