feat: Add global imagePullSecrets and PDBs

--- a/charts/wazuh/templates/dashboard/deployment.yaml
+++ b/charts/wazuh/templates/dashboard/deployment.yaml
@@ -31,6 +31,10 @@ spec:
         - name: dashboard-certs
           secret:
             secretName: dashboard-tls
+      {{- with .Values.imagePullSecrets -}}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
         - name: wazuh-dashboard
           image: "{{ .Values.dashboard.images.repository }}:{{ .Values.dashboard.images.tag }}"
