--- a/charts/wazuh/templates/indexer/statefulset.yaml
+++ b/charts/wazuh/templates/indexer/statefulset.yaml
@@ -36,6 +36,10 @@ spec:
       - configMap:
           name: {{ include "wazuh.fullname" . }}-indexer-config
         name: indexer-conf
+      {{- with .Values.imagePullSecrets -}}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       initContainers:
         - name: volume-mount-hack
           image: busybox:stable
