--- a/charts/wazuh/templates/manager/master/statefulset.yaml
+++ b/charts/wazuh/templates/manager/master/statefulset.yaml
@@ -44,6 +44,10 @@ spec:
             secretName: wazuh-authd-pass
         - emptyDir: {}
           name: result-config
+      {{- with .Values.imagePullSecrets -}}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       initContainers:
         - name: update-index
           image: busybox:stable
