--- a/charts/wazuh/templates/dashboard/ingress.yaml
+++ b/charts/wazuh/templates/dashboard/ingress.yaml
@@ -2,15 +2,23 @@
 apiVersion:  networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: name: {{ include "wazuh.fullname" . }}-dashboard
+  name: {{ include "wazuh.fullname" . }}-dashboard
   labels:
     app: {{ include "wazuh.fullname" . }}-dashboard
+    {{- range $labelKey, $labelValue := .Values.dashboard.ingress.labels }}
+    {{ $labelKey }}: {{ $labelValue | toYaml }}
+    {{- end }}
+  {{- with .Values.dashboard.ingress.annotations }}
   annotations:
-    {{- toYaml .Values.dashboard.ingress.annotations | nindent 4 }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
-  {{- with .Values.dashboard.ingress.tls }}
+  {{- if .Values.dashboard.ingress.ingressClassName }}
+  ingressClassName: {{ .Values.dashboard.ingress.ingressClassName }}
+  {{- end -}}
+  {{- if .Values.dashboard.ingress.tls }}
   tls:
-    {{- range . }}
+    {{- range .Values.dashboard.ingress.tls }}
     - hosts:
         {{- range .hosts }}
         - {{ tpl . $ | quote }}
@@ -21,15 +29,21 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-    - host: {{ .Values.dashboard.ingress.host }}
+    {{- range .Values.dashboard.ingress.hosts }}
+    - host: {{ tpl .host $ | quote }}
       http:
         paths:
-          - backend:
+          {{- range .paths }}
+          - path: {{ .path }}
+            {{- if .pathType }}
+            pathType: {{ .pathType }}
+            {{- end }}
+            backend:
               service:
-                name: {{ include "wazuh.fullname" . }}-dashboard
+                name: dashboard
                 port:
-                  number: 443
-            path: /
-            pathType: Prefix
+                  number: {{ $.Values.dashboard.service.httpPort }}
+          {{- end }}
+    {{- end }}
 {{- end -}}
 
