--- a/charts/wazuh/templates/manager/master/statefulset.yaml
+++ b/charts/wazuh/templates/manager/master/statefulset.yaml
@@ -5,10 +5,10 @@ metadata:
   labels:
     app: {{ include "wazuh.fullname" . }}-manager
     node-type: master
+  {{- with .Values.wazuh.master.annotations }}
   annotations:
-    {{- if .Values.wazuh.master.annotations -}}
-    {{- toYaml .Values.wazuh.master.annotations | nindent 4 }}
-    {{- end }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   replicas: 1
   selector:
@@ -27,8 +27,8 @@ spec:
       name: wazuh-manager-master
       annotations:
         checksum/config: {{ (include (print .Template.BasePath "/manager/configmap.yaml") . | cat (include (print .Template.BasePath "/manager/secret-api-cred.yaml") . ) | cat (include (print .Template.BasePath "/manager/secret-authd-pass.yaml") . ) | cat (include (print .Template.BasePath "/manager/secret-cluster-key.yaml") . ) | sha256sum) }}
-        {{- if .Values.wazuh.master.annotations -}}
-        {{- toYaml .Values.wazuh.master.annotations | nindent 8 }}
+        {{- with .Values.wazuh.master.podAnnotations }}
+        {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
       volumes:
