--- a/charts/wazuh/templates/manager/worker/statefulset.yaml
+++ b/charts/wazuh/templates/manager/worker/statefulset.yaml
@@ -5,10 +5,10 @@ metadata:
   labels:
     app: {{ include "wazuh.fullname" . }}-manager
     node-type: worker
+  {{- with .Values.wazuh.worker.annotations }}
   annotations:
-    {{- if .Values.wazuh.worker.annotations -}}
-    {{- toYaml .Values.wazuh.worker.annotations | nindent 4 }}
-    {{- end }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   replicas: {{ .Values.wazuh.worker.replicas }}
   selector:
@@ -25,8 +25,8 @@ spec:
       name: wazuh-manager-worker
       annotations:
         checksum/config: {{ (include (print .Template.BasePath "/manager/configmap.yaml") . | cat (include (print .Template.BasePath "/manager/secret-api-cred.yaml") . ) | cat (include (print .Template.BasePath "/manager/secret-authd-pass.yaml") . ) | cat (include (print .Template.BasePath "/manager/secret-cluster-key.yaml") . ) | sha256sum) }}
-        {{- if .Values.wazuh.worker.annotations -}}
-        {{- toYaml .Values.wazuh.worker.annotations | nindent 8 }}
+        {{- with .Values.wazuh.worker.podAnnotations }}
+        {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
       affinity:
