--- a/charts/wazuh/Chart.yaml
+++ b/charts/wazuh/Chart.yaml
@@ -31,15 +31,19 @@ annotations:
     - kind: added
       description: Checksum on Deployments and StatefulSets for Pod restarts after config changes
     - kind: added
-      description: PodDisruptionBudgets and NetworkPolicies
-    - kind: changed:
+      description: PodDisruptionBudgets
+    - kind: added
+      description: NetworkPolicies with default rules
+    - kind: changed
       description: initContainer images to busybox:stable
+    - kind: changed
+      description: Annotations and Pod annotations separated
   artifacthub.io/links: |
     - name: application source
       url: https://github.com/wazuh/wazuh
     - name: kustomize source
       url: https://github.com/wazuh/wazuh-kubernetes
-  artifacthub.io/prerelease: "true"
+  artifacthub.io/prerelease: "false"
   artifacthub.io/screenshots: |
     - title: Home Page
       url: https://promptlylabs.github.io/wazuh-helm-chart/images/dashboard.png
