--- a/charts/wazuh/templates/manager/master/statefulset.yaml
+++ b/charts/wazuh/templates/manager/master/statefulset.yaml
@@ -44,7 +44,7 @@ spec:
             secretName: wazuh-authd-pass
         - emptyDir: {}
           name: result-config
-      {{- with .Values.imagePullSecrets -}}
+      {{ with .Values.imagePullSecrets -}}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
