--- a/charts/wazuh/templates/indexer/statefulset.yaml
+++ b/charts/wazuh/templates/indexer/statefulset.yaml
@@ -36,7 +36,7 @@ spec:
       - configMap:
           name: {{ include "wazuh.fullname" . }}-indexer-config
         name: indexer-conf
-      {{- with .Values.imagePullSecrets -}}
+      {{ with .Values.imagePullSecrets -}}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
