--- a/charts/wazuh/templates/manager/worker/statefulset.yaml
+++ b/charts/wazuh/templates/manager/worker/statefulset.yaml
@@ -51,7 +51,7 @@ spec:
           emptyDir: {}
       securityContext:
         fsGroup: 101
-      {{- with .Values.imagePullSecrets -}}
+      {{ with .Values.imagePullSecrets -}}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
