--- a/charts/wazuh/templates/manager/worker/statefulset.yaml
+++ b/charts/wazuh/templates/manager/worker/statefulset.yaml
@@ -87,6 +87,10 @@ spec:
             # Wazuh config
             - mountPath: /wazuh-config-mount/etc/
               name: result-config
+            - mountPath: /var/ossec/etc/local_internal_options.conf
+              name: config
+              readOnly: true
+              subPath: master_local_internal_options.conf
             # Certs
             - mountPath: /etc/ssl/root-ca.pem
               name: filebeat-certs
